--- a/www/page/monitor.phtml
+++ b/www/page/monitor.phtml
@@ -2,6 +2,14 @@
 $page_name = 'Home Page';
 $page_des = 'Team Leads';
 
+$report = new ServerReport();
+$gui = new GUIReport();
+$servers = $report->getMonitorServer();
+$remote_load = $report->getRemoteLoad($_GET['server'],true);
+$login_record = $remote_load['os_info']['lastlog'];
+$login_record = trim(substr($login_record, 0, strpos($login_record, "wtmp")));
+$server_specs = json_encode($gui->get_server_specs($_GET['server']),true);
+
 $header_scripts = array();
 $footer_scripts = array();
 
@@ -18,11 +26,7 @@ include_once WWW_DIR.'page/template.nav.php';
 	google.charts.setOnLoadCallback(drawPHPPidTrend);
 
 	function drawTable() {
-		var jsonData = $.ajax({
-		  url: "/api?method=get_server_specs&server_id=<?php echo $_GET['server']; ?>",
-		  dataType: "json",
-		  async: false
-		}).responseText;
+		var jsonData = <?php echo $server_specs; ?>;
 		var data = new google.visualization.DataTable(jsonData);
 
 		var table = new google.visualization.Table(document.getElementById('server_specs'));
@@ -66,7 +70,7 @@ include_once WWW_DIR.'page/template.nav.php';
 			  logScale: false
 			},
 			vAxis: {
-			  title: 'Memory Usage',
+			  title: 'Memory Use %',
 			  logScale: false
 			},
 			colors: ['#a52714']
@@ -140,6 +144,12 @@ include_once WWW_DIR.'page/template.nav.php';
 			<div id="server_specs"></div>
 			</div>
 		</div>
+		<div class="col-lg-8">
+			<div class="panel panel-info">
+			<div class="panel-heading">Login Records</div>
+			<pre><?php echo $login_record; ?></pre>
+			</div>
+		</div>
 	</div>
 	
 	<div class="row">
@@ -178,11 +188,6 @@ include_once WWW_DIR.'page/template.nav.php';
 		</div>
 	</div>
 	
-	<div class="row">
-		<div class="col-lg-12">
-			<pre><?php $report = new ServerReport(); print_r($report->getRemoteLoad($_GET['server'],true));?></pre>
-		</div>
-	</div>
 		<!-- /.row -->
 	</div>
 	<!-- /.container-fluid -->
