--- a/www/page/monitor.phtml
+++ b/www/page/monitor.phtml
@@ -76,7 +76,7 @@ include_once WWW_DIR.'page/template.nav.php';
 			  logScale: false
 			},
 			vAxis: {
-			  title: 'CPU Idle %',
+			  title: 'CPU Utilization',
 			  logScale: false
 			},
 			colors: ['#a52714', '#097138','#0000ff']
